--- a/webhook.yml
+++ b/webhook.yml
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
         - name: auto-tracing-mutating-webhook
-          image: k0diak/auto-tracing-webhook:latest
+          image: k0diak/auto-tracing-webhook:0.0.3
           imagePullPolicy: Always
           env:
           - name: JAEGER_AGENT_PORT
